Next Release
============

- Improved readability of default ``header.mako`` template,
  and fixed highlighting of site sections in header bar so that "Blog"
  remains highlighted for all posts.

- Changed URLs to end with a / to avoid spurious 301 responses.
  See https://github.com/EnigmaCurry/blogofile_blog/issues/5

- Fix handling of post header ``date`` and ``updated`` fields that are
  converted to ``datetime`` objects by the YAML parser.
  See https://github.com/EnigmaCurry/blogofile_blog/pull/1

- Use ``config.blog.post.date_format`` in post file header creation
  as well as in post file processing.


0.8b1
=====

If you've been using the blogofile_blog code from GitHub but haven't
updated in a while you should take note of the following.

Breaking Changes
----------------

- Functions in the ``blogofile.util`` module can now only be accessed in
  templates via the ``bf.util`` namespace; e.g. ``bf.util.site_path_helper()``.
  Accessing util functions via ``bf.config.util`` no longer works.
  It is unknown how widespread the use of ``bf.config.util`` is,
  but at least 2 in-the-wild occurrences were found and corrected in
  the ``blogofile.com`` site source files.


Bug Fixes
---------

- Fix an issue with the template lookup order whereby user's templates
  failed to override plugin ``site_src`` template of the same name.
  See https://github.com/EnigmaCurry/blogofile_blog/issues/13

- Fix Python 2 handling of utf-8 encoded content in posts.
  See https://github.com/EnigmaCurry/blogofile_blog/pull/10.

- Fix disabling of Disqus comments on permalink page.
  See https://github.com/EnigmaCurry/blogofile_blog/pull/9.


Features
--------

- The codebase has been unified for Python 2.6, 2.7 and 3.2 (no 2to3 or
  3to2 conversion required).

- No longer dependent on a version of the ``argparse`` library bundled
  with blogofle. ``argparse`` is included in the standard library for
  Python 2.7 and 3.2+. ``setup.py`` will install it from PyPI for Python